# moss-cfh

./: .gitignore  dfx.json  index.html  package-lock.json  readme.md  shell.nix
src/: App.svelte  main.ts
src/backend/: Cargo.toml  backend.did
src/backend/src/: lib.rs  store.rs
src/routes/: About.svelte  Me.svelte  Posts.svelte
src/store/: ic.ts
