[package]
name = "moss_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
candid_derive = "0.6.6"
ciborium = "0.2.2"
ic-cdk = "0.16"
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.6.5"
ic_principal = "0.1.1"
icrc-ledger-types = "0.1.6"
lazy_static = "1.5.0"
serde = "1.0.214"
